document cache search better move saveInDataDir into cache.r Frame -> frame typo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(countNumeric)
 export(dropRowsWithNAField)
 export(expandFactors)
 export(factorToCols)
+export(findCacheDir)
+export(findCacheFilePath)
 export(getDroppedNumeric)
 export(getFactorNames)
 export(getFromCache)
