move more generalizable test data generation into this package. also a flatten_list function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,15 +28,22 @@ export(listTrim)
 export(loadFromCache)
 export(logicalToBinary)
 export(lsCache)
+export(lsf)
 export(lsp)
 export(mergeBetter)
 export(mergeLists)
 export(propIsNa)
 export(propNaPerField)
+export(random_test_dates)
+export(random_test_letters)
+export(random_test_numbers)
+export(random_test_posixlt_datetimes)
 export(read.zip.url)
 export(saveInDataDir)
 export(saveToCache)
+export(shuffle)
 export(strMultiMatch)
 export(strPairMatch)
 export(strip)
+export(testCoverage)
 export(trim)
