--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(areIntegers)
 export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
+export(bad_input)
 export(countIsNa)
 export(countNonNaCumulative)
 export(countNonNaPairs)
@@ -15,9 +16,11 @@ export(countNotNumeric)
 export(countNumeric)
 export(dropRowsWithNAField)
 export(expandFactors)
+export(extreme_numbers)
 export(factorToCols)
 export(findCacheDir)
 export(findCacheFilePath)
+export(flatten_list)
 export(getDroppedNumeric)
 export(getFactorNames)
 export(getFromCache)
@@ -32,6 +35,7 @@ export(lsf)
 export(lsp)
 export(mergeBetter)
 export(mergeLists)
+export(numbers_to_long_and_float)
 export(propIsNa)
 export(propNaPerField)
 export(random_test_dates)
@@ -47,3 +51,4 @@ export(strPairMatch)
 export(strip)
 export(testCoverage)
 export(trim)
+export(zeroes)
