platformIsLinux and platformIsWindows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(lsp)
 export(mergeBetter)
 export(mergeLists)
 export(numbers_to_long_and_float)
+export(platformIsLinux)
+export(platformIsWindows)
 export(propIsNa)
 export(propNaPerField)
 export(random_test_dates)
