move shuffle from generate test cases to util.r rename flatten_list respect min and max for numeric and integer generation new random test integer function new allIsInteger function updates to areIntegers extensive tests to define the behavior of allIsInteger and areIntegers (TODO: make consistent NA behavior with allIsNumeric, etc) add_time_to_date bugfixes na.rm for isValidTime permute - beautiful little function to generate (factorial) combinations of a vector isFlat tests whether a list has sub-lists. more trim tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%nin%")
 export(add_time_to_date)
 export(affixFields)
+export(allIsInteger)
 export(allIsNumeric)
 export(areIntegers)
 export(asCharacterNoWarn)
@@ -20,12 +21,13 @@ export(extreme_numbers)
 export(factorToCols)
 export(findCacheDir)
 export(findCacheFilePath)
-export(flatten_list)
+export(flattenList)
 export(getDroppedNumeric)
 export(getFactorNames)
 export(getFromCache)
 export(getNAFields)
 export(getNonFactorNames)
+export(isFlat)
 export(isValidTime)
 export(listTrim)
 export(loadFromCache)
@@ -36,9 +38,12 @@ export(lsp)
 export(mergeBetter)
 export(mergeLists)
 export(numbers_to_long_and_float)
+export(permute)
+export(permuteWithRepeats)
 export(propIsNa)
 export(propNaPerField)
 export(random_test_dates)
+export(random_test_integers)
 export(random_test_letters)
 export(random_test_numbers)
 export(random_test_posixlt_datetimes)
