rename generate-test-cases to the now more general testing.r tests for test function argument combinations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(countNotNumeric)
 export(countNumeric)
 export(dropRowsWithNAField)
 export(expandFactors)
+export(expect_that_combine)
 export(extreme_numbers)
 export(factorToCols)
 export(findCacheDir)
