split combining args into either combining args from first argument, or combining all the args. hard limit permute to avoid massive factorial expansion.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(areIntegers)
 export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
+export(assignCache)
 export(bad_input)
 export(countIsNa)
 export(countNonNaCumulative)
@@ -17,7 +18,8 @@ export(countNotNumeric)
 export(countNumeric)
 export(dropRowsWithNAField)
 export(expandFactors)
-export(expect_that_combine)
+export(expect_that_combine_all_args)
+export(expect_that_combine_first_arg)
 export(extreme_numbers)
 export(factorToCols)
 export(findCacheDir)
@@ -28,6 +30,7 @@ export(getFactorNames)
 export(getFromCache)
 export(getNAFields)
 export(getNonFactorNames)
+export(isCached)
 export(isFlat)
 export(isValidTime)
 export(listTrim)
