added read xlsx for linux platforms df.r formatting test for factors before mergeBetter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(random_test_letters)
 export(random_test_numbers)
 export(random_test_posixlt_datetimes)
 export(read.zip.url)
+export(readXlsxLinux)
 export(rmCache)
 export(saveInDataDir)
 export(saveToCache)
