strip to prepare for paste into 'formula' formatting and docs in cache.r and util.r produce formula-friendly factor names in expandFactors tests for expandFactors just return the data frame in expandFactors, not the new field names.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(countNonNaCumulative)
 export(countNonNaPairs)
 export(countNotNumeric)
 export(countNumeric)
+export(dropDuplicateFields)
 export(dropRowsWithNAField)
 export(expandFactors)
 export(expect_that_combine_all_args)
@@ -30,6 +31,7 @@ export(getFactorNames)
 export(getFromCache)
 export(getNAFields)
 export(getNonFactorNames)
+export(getNonNAFields)
 export(isCached)
 export(isFlat)
 export(isValidTime)
@@ -62,6 +64,7 @@ export(shuffle)
 export(strMultiMatch)
 export(strPairMatch)
 export(strip)
+export(stripForFormula)
 export(testCoverage)
 export(trim)
 export(zeroes)
