function to make a linear formula from strings of variable names docs for cache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
 export(assignCache)
+export(assignDatedCache)
 export(bad_input)
+export(buildLinearFormula)
 export(countIsNa)
 export(countNonNaCumulative)
 export(countNonNaPairs)
@@ -26,16 +28,21 @@ export(factorToCols)
 export(findCacheDir)
 export(findCacheFilePath)
 export(flattenList)
+export(getCacheFileName)
+export(getDated)
+export(getDatedFromCache)
 export(getDroppedNumeric)
 export(getFactorNames)
 export(getFromCache)
 export(getNAFields)
 export(getNonFactorNames)
 export(getNonNAFields)
+export(invwhich)
 export(isCached)
 export(isFlat)
 export(isValidTime)
 export(listTrim)
+export(loadDatedFromCache)
 export(loadFromCache)
 export(logicalToBinary)
 export(lsCache)
