updated tests, docs, random character generation conversion of factors to data frames much improved.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ export(expandFactors)
 export(expect_that_combine_all_args)
 export(expect_that_combine_first_arg)
 export(extreme_numbers)
-export(factorToCols)
+export(factorToDataframeLogical)
 export(findCacheDir)
 export(findCacheFilePath)
 export(flattenList)
