testCoverage rename to avoid conflict with another test coverage tool, and bug fix arguments order in loadFromCache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,7 +72,7 @@ export(strMultiMatch)
 export(strPairMatch)
 export(strip)
 export(stripForFormula)
-export(testCoverage)
+export(testFunctionCoverage)
 export(trim)
 export(zeroes)
 import(magrittr)
