more tests, moved list functions out

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(isCached)
 export(isFlat)
 export(isValidTime)
 export(listTrim)
+export(listTrimFlat)
 export(loadDatedFromCache)
 export(loadFromCache)
 export(logicalToBinary)
