--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
 export(assignCache)
-export(assignDatedCache)
 export(bad_input)
 export(buildLinearFormula)
 export(countIsNa)
@@ -27,7 +26,7 @@ export(factorToDataframeLogical)
 export(findCacheDir)
 export(findCacheFilePath)
 export(flattenList)
-export(getCacheFileName)
+export(getCacheVarDated)
 export(getDated)
 export(getDatedFromCache)
 export(getDropped)
