WIP rename files in cache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ export(findCacheDir)
 export(findCacheFilePath)
 export(flattenList)
 export(getCacheVarDated)
-export(getDated)
 export(getDropped)
 export(getFactorNames)
 export(getFromCache)
@@ -40,10 +39,9 @@ export(isFlat)
 export(isValidTime)
 export(listTrim)
 export(listTrimFlat)
-export(loadDatedFromCache)
 export(loadFromCache)
 export(logicalToBinary)
-export(lsCache)
+export(lsCacheFiles)
 export(lsf)
 export(lsp)
 export(mergeBetter)
@@ -62,6 +60,7 @@ export(random_test_numbers)
 export(random_test_posixlt_datetimes)
 export(read.zip.url)
 export(readXlsxLinux)
+export(renameCache)
 export(rmCache)
 export(saveInDataDir)
 export(saveToCache)
