cache test updates assignCacheByFun (untested) formatting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
 export(assignCache)
+export(assignCacheByFun)
 export(bad_input)
 export(buildLinearFormula)
 export(countIsNa)
