allow NULLs for start and end date. Drop searchEnv lsCache exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(listTrim)
 export(listTrimFlat)
 export(loadFromCache)
 export(logicalToBinary)
+export(lsCache)
 export(lsCacheFiles)
 export(lsf)
 export(lsp)
