simplified cache to ignore environments, just worry about what's on the disk.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(assignCache)
 export(assignCacheByFun)
 export(bad_input)
 export(buildLinearFormula)
+export(cache)
 export(countIsNa)
 export(countNonNaCumulative)
 export(countNonNaPairs)
@@ -64,6 +65,7 @@ export(read.zip.url)
 export(readXlsxLinux)
 export(renameCache)
 export(rmCache)
+export(rmRecursive)
 export(saveInDataDir)
 export(saveToCache)
 export(shuffle)
