function to generate all combinations of a vector and its subsets function to optimize a multidimensional binary problem by brute force

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(assignCacheByFun)
 export(bad_input)
 export(buildLinearFormula)
 export(cache)
+export(combn_subset)
 export(countIsNa)
 export(countNonNaCumulative)
 export(countNonNaPairs)
@@ -50,6 +51,7 @@ export(lsp)
 export(mergeBetter)
 export(mergeLists)
 export(numbers_to_long_and_float)
+export(opt_binary_brute)
 export(permute)
 export(permuteWithRepeats)
 export(platformIsLinux)
