be case insensitive in mergeBetter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(logicalToBinary)
 export(lsCache)
 export(lsCacheFiles)
 export(lsf)
+export(lsos)
 export(lsp)
 export(mergeBetter)
 export(mergeLists)
