--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: jwutil
-Title: What the package does (short line)
-Version: 0.1
+Title: Simple utilities for data frame manipulation, caching, etc.
+Version: 1.0
 Authors@R: person("Jack O. Wasey", "Creator", role=c("aut", "cre"),
     email="jack@jackwasey.com")
 Description: small set of simple utilities for common data manipulation tasks,
@@ -12,9 +12,6 @@ Imports:
     magrittr
 Suggests:
     testthat,
-    devtools,
-    roxygen2,
-    icd9,
-    lubridate
+    devtools
 License: GPL-3
 LazyData: true
