--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(getNAFields)
 export(getNonFactorNames)
 export(getNonNAFields)
 export(invwhich)
+export(is.Date)
 export(isCached)
 export(isFlat)
 export(isValidTime)
