--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: jwutil
 Title: Simple utilities for data frame, list and string manipulation, disk caching, test coverage, and more.
-Version: 1.0
-Date: 2015-01-01
-Authors@R: person("Jack O. Wasey", "Creator", role=c("aut", "cre"),
-    email="jack@jackwasey.com")
+Version: 1.0.1
+Date: 2015-01-03
+Authors@R: person("Jack O. Wasey", role = c("aut", "cre"),
+    email = "jack@jackwasey.com")
 Description: This is a set of simple utilities for various data manipulation and caching tasks. The goal is to use base tools well, without bringing in any dependencies. Main areas of interest are data frame manipulation, such as converting factors in multiple binary indicator columns, and disk caching of data frames (which is optionally done by date range). There are testing functions which provide testthat extensions to permute arguments to function calls.
 URL: https://github.com/jackwasey/jwutil
 Depends:
@@ -13,5 +13,4 @@ Suggests:
     devtools
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
-Roxygen: list(wrap=FALSE)
 Encoding: UTF-8
