--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,23 @@
 Package: jwutil
-Title: Utilities for Data Manipulation, Disk Caching, Test Coverage
-Version: 1.0.1
+Title: Utilities for Data Manipulation, Disk Caching, Testing
+Version: 1.0.2
 Date: 2015-01-03
 Authors@R: person("Jack O. Wasey", role = c("aut", "cre"),
     email = "jack@jackwasey.com")
-Description: This is a set of simple utilities for various data manipulation and caching tasks. The goal is to use base tools well, without bringing in any dependencies. Main areas of interest are data frame manipulation, such as converting factors in multiple binary indicator columns, and disk caching of data frames (which is optionally done by date range). There are testing functions which provide testthat extensions to permute arguments to function calls.
+Description: This is a set of simple utilities for various data manipulation and
+    caching tasks. The goal is to use base tools well, without bringing in any
+    dependencies. Main areas of interest are data frame manipulation, such as
+    converting factors in multiple binary indicator columns, and disk caching of
+    data frames (which is optionally done by date range). There are testing
+    functions which provide testthat expectations to permute arguments to
+    function calls. There are functions and data to test extreme numbers, dates,
+    and bad input of various kinds which should allow testing failure and corner
+    cases. The test suite has many examples of usage.
 URL: https://github.com/jackwasey/jwutil
 Depends:
     R (>= 3.1.1)
 Suggests:
-    testthat,
-    devtools
+    testthat
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
