--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(invwhich)
 export(is.Date)
 export(isCached)
 export(isFlat)
+export(isRowSorted)
 export(isValidTime)
 export(listTrim)
 export(listTrimFlat)
@@ -64,6 +65,7 @@ export(platformIsLinux)
 export(platformIsWindows)
 export(propIsNa)
 export(propNaPerField)
+export(propRowSorted)
 export(random_test_dates)
 export(random_test_integers)
 export(random_test_letters)
@@ -83,3 +85,6 @@ export(strip)
 export(stripForFormula)
 export(trim)
 export(zeroes)
+import(Rcpp)
+importFrom(Rcpp,sourceCpp)
+useDynLib(jwutil)
