include rcpp google gprof profiling and rowsorted C++ travis for integration and testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(saveToCache)
 export(shuffle)
 export(strMultiMatch)
 export(strPairMatch)
+export(stressprof)
 export(strip)
 export(stripForFormula)
 export(trim)
