--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,10 @@ Description: This is a set of simple utilities for various data manipulation and
 URL: https://github.com/jackwasey/jwutil
 Depends:
     R (>= 3.1.1)
+Imports: Rcpp
 Suggests:
-    testthat,
-    Rcpp
+    testthat
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
 LinkingTo: Rcpp
-Imports: Rcpp
