--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,7 @@ URL: https://github.com/jackwasey/jwutil
 Depends:
     R (>= 3.1.1)
 Suggests:
-    testthat,
-    Rcpp
+    testthat
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
