--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Description: This is a set of simple utilities for various data manipulation and
     cases. The test suite has many examples of usage.
 URL: https://github.com/jackwasey/jwutil
 Depends:
-    R (>= 3.1.1)
+    R (>= 3.1.1),
+    Rcpp
 Suggests:
     testthat
 License: GPL-3
