function to knit::purl a vignette and source the result from a temporary directory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(rmRecursive)
 export(saveInDataDir)
 export(saveToCache)
 export(shuffle)
+export(source_purl)
 export(strMultiMatch)
 export(strPairMatch)
 export(strip)
