find columns in a data frame with numeric and non-binary numeric values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(affixFields)
 export(allIsInteger)
 export(allIsNumeric)
 export(areIntegers)
+export(areNumeric)
 export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
@@ -57,7 +58,9 @@ export(lsp)
 export(mergeBetter)
 export(mergeLists)
 export(nonBinaryCols)
+export(nonBinaryNumericCols)
 export(numbers_to_long_and_float)
+export(numericCols)
 export(opt_binary_brute)
 export(permute)
 export(permuteWithRepeats)
