--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,25 @@
 Package: jwutil
-Title: A Set of Tools for Data Manipulation, Disk Caching, Testing
+Title: Tools for Data Manipulation and Testing
 Version: 1.1
 Date: 2015-01-03
 Authors@R: person("Jack O. Wasey", role = c("aut", "cre"),
     email = "jack@jackwasey.com")
-Description: This is a set of simple utilities for various data manipulation and
-    caching tasks. The goal is to use base tools well, without bringing in any
+Description: This is a set of simple utilities for various data manipulation tasks. The goal is to use base tools well, without bringing in any
     dependencies. Main areas of interest are data frame manipulation, such as
-    converting factors in multiple binary indicator columns, and disk caching of
-    data frames (which is optionally done by date range). There are testing
+    converting factors in multiple binary indicator columns. There are testing
     functions which provide testthat expectations to permute arguments to
     function calls. There are functions and data to test extreme numbers, dates,
     and bad input of various kinds which should allow testing failure and corner
-    cases. The test suite has many examples of usage.
+    cases, which can be used for fuzzing your functions. The test suite has many examples of usage.
 URL: https://github.com/jackwasey/jwutil
 Depends:
     R (>= 3.0.0)
 Imports:
-    Rcpp
+    Rcpp,
+    checkmate
 Suggests:
-    testthat
+    testthat,
+    knitr
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
