--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(strPairMatch)
 export(strip)
 export(stripForFormula)
 export(trim)
+export(zeroNAs)
 export(zeroes)
 import(Rcpp)
 useDynLib(jwutil)
