--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(mergeBetter)
 export(mergeLists)
 export(nonBinaryCols)
 export(nonBinaryNumericCols)
+export(non_binary_cols)
 export(numbers_to_long_and_float)
 export(numericCols)
 export(opt_binary_brute)
