--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,8 @@ export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
 export(bad_input)
-export(binaryCols)
+export(binary_col_names)
+export(binary_cols)
 export(buildLinearFormula)
 export(combn_subset)
 export(countIsNa)
@@ -47,11 +48,9 @@ export(lsos)
 export(lsp)
 export(mergeBetter)
 export(mergeLists)
-export(nonBinaryCols)
-export(nonBinaryNumericCols)
-export(non_binary_cols)
 export(numbers_to_long_and_float)
-export(numericCols)
+export(numeric_col_names)
+export(numeric_cols)
 export(opt_binary_brute)
 export(permute)
 export(permuteWithRepeats)
@@ -68,6 +67,7 @@ export(random_test_posixlt_datetimes)
 export(read.zip.url)
 export(readXlsxLinux)
 export(rmRecursive)
+export(set_attr_in_place)
 export(shuffle)
 export(source_purl)
 export(strMultiMatch)
