updated for CRAN release, linted, cleans up temp files, some function name snake casing, works with R 3.3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,8 +65,8 @@ export(random_test_letters)
 export(random_test_numbers)
 export(random_test_posixlt_datetimes)
 export(read.zip.url)
-export(readXlsxLinux)
-export(rmRecursive)
+export(read_xlsx_linux)
+export(rm_r)
 export(set_attr_in_place)
 export(shuffle)
 export(source_purl)
@@ -75,7 +75,7 @@ export(strPairMatch)
 export(strip)
 export(stripForFormula)
 export(trim)
-export(zeroNAs)
+export(zero_na)
 export(zeroes)
 import(Rcpp)
 useDynLib(jwutil)
