--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: jwutil
 Title: Tools for Data Manipulation and Testing
-Version: 1.1
-Date: 2015-01-03
+Version: 1.2
+Date: 2016-05-03
 Authors@R: person("Jack O. Wasey", role = c("aut", "cre"),
     email = "jack@jackwasey.com")
-Description: This is a set of simple utilities for various data manipulation tasks. The goal is to use base tools well, without bringing in any
+Description: This is a set of simple utilities for various data manipulation tasks.
+    The goal is to use base tools well, without bringing in any
     dependencies. Main areas of interest are data frame manipulation, such as
     converting factors in multiple binary indicator columns. There are testing
     functions which provide testthat expectations to permute arguments to
@@ -15,8 +16,11 @@ URL: https://github.com/jackwasey/jwutil
 Depends:
     R (>= 3.0.0)
 Imports:
+    checkmate,
+    methods,
     Rcpp,
-    checkmate
+    stats,
+    utils
 Suggests:
     testthat,
     knitr
