add PRISMA flow chart generation, pass check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: jwutil
 Title: Tools for Data Manipulation and Testing
 Version: 1.2
-Date: 2016-05-03
-Authors@R: person("Jack O. Wasey", role = c("aut", "cre"),
+Date: 2016-10-11
+Authors@R: person("Jack O. Wasey", role = c("aut", "cre", "cph"),
     email = "jack@jackwasey.com")
 Description: This is a set of simple utilities for various data manipulation tasks.
-    The goal is to use base tools well, without bringing in any
-    dependencies. Main areas of interest are data frame manipulation, such as
+    The goal is to use base tools well, without bringing in many
+    dependencies. Main areas of interest are semi-automated data frame manipulation, such as
     converting factors in multiple binary indicator columns. There are testing
     functions which provide testthat expectations to permute arguments to
     function calls. There are functions and data to test extreme numbers, dates,
@@ -23,7 +23,8 @@ Imports:
     utils
 Suggests:
     testthat,
-    knitr
+    knitr,
+    DiagrammeR
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
