--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,9 @@ export(opt_binary_brute)
 export(permute)
 export(permuteWithRepeats)
 export(platformIsLinux)
+export(platformIsMac)
 export(platformIsWindows)
+export(prisma)
 export(propIsNa)
 export(propNaPerField)
 export(propRowSorted)
