--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: jwutil
 Title: Tools for Data Manipulation and Testing
-Version: 1.1
+Version: 1.1.1
 Date: 2016-10-11
 Authors@R: person("Jack O. Wasey", role = c("aut", "cre", "cph"),
     email = "jack@jackwasey.com")
-Description: This is a set of simple utilities for various data manipulation tasks.
+Description: This is a set of simple utilities for various data manipulation and testing tasks.
     The goal is to use base tools well, without bringing in many
     dependencies. Main areas of interest are semi-automated data frame manipulation, such as
     converting factors in multiple binary indicator columns. There are testing
-    functions which provide testthat expectations to permute arguments to
+    functions which provide 'testthat' expectations to permute arguments to
     function calls. There are functions and data to test extreme numbers, dates,
     and bad input of various kinds which should allow testing failure and corner
     cases, which can be used for fuzzing your functions. The test suite has many examples of usage.
@@ -24,7 +24,6 @@ Imports:
 Suggests:
     testthat,
     knitr,
-    DiagrammeR,
     lintr
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
