keep names when permuting argument order min_r_version using base functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(lsos)
 export(lsp)
 export(mergeBetter)
 export(mergeLists)
+export(min_r_version)
 export(numbers_to_long_and_float)
 export(numeric_col_names)
 export(numeric_cols)
