--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Date: 2016-10-11
 Authors@R: person("Jack O. Wasey", role = c("aut", "cre", "cph"),
     email = "jack@jackwasey.com")
 Description: This is a set of simple utilities for various data manipulation and testing tasks.
-    The goal is to use base tools well, without bringing in many
+    The goal is to use base tools and 'tidyverse' well, without bringing in too many
     dependencies. Main areas of interest are semi-automated data frame manipulation, such as
     converting factors in multiple binary indicator columns. There are testing
     functions which provide 'testthat' expectations to permute arguments to
@@ -17,14 +17,16 @@ Depends:
     R (>= 3.0.0)
 Imports:
     checkmate,
+    magrittr,
     methods,
     Rcpp,
     stats,
     utils
 Suggests:
-    testthat,
     knitr,
-    lintr
+    lintr,
+    testthat,
+    tools
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
