allow multi-column merging in mergeBetter. Fix lints. logic error in binary column name selection when inverted.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ export(is.Date)
 export(isFlat)
 export(isRowSorted)
 export(isValidTime)
+export(jw_df_basics)
+export(jw_qq_diag)
 export(listTrim)
 export(listTrimFlat)
 export(logicalToBinary)
@@ -50,6 +52,7 @@ export(mergeBetter)
 export(mergeLists)
 export(min_r_version)
 export(numbers_to_long_and_float)
+export(numeric_char_col_names)
 export(numeric_col_names)
 export(numeric_cols)
 export(opt_binary_brute)
