integrate back common functions from icd package, and add wercker ci build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,9 @@ export(allIsInteger)
 export(allIsNumeric)
 export(areIntegers)
 export(areNumeric)
-export(asCharacterNoWarn)
 export(asIntegerNoWarn)
 export(asNumericNoWarn)
+export(as_char_no_warn)
 export(bad_input)
 export(binary_col_names)
 export(binary_cols)
@@ -20,6 +20,7 @@ export(countNonNaCumulative)
 export(countNonNaPairs)
 export(countNotNumeric)
 export(countNumeric)
+export(download_to_data_raw)
 export(dput_expect_equal)
 export(dropDuplicateFields)
 export(expandFactors)
@@ -27,6 +28,7 @@ export(expect_that_combine_all_args)
 export(expect_that_combine_first_arg)
 export(extreme_numbers)
 export(factorToDataframeLogical)
+export(factor_nosort)
 export(fillMissingCombs)
 export(filterBetter)
 export(flattenList)
@@ -38,7 +40,6 @@ export(getNonNAFields)
 export(invwhich)
 export(is.Date)
 export(isFlat)
-export(isRowSorted)
 export(isValidTime)
 export(jw_df_basics)
 export(listTrim)
@@ -71,6 +72,7 @@ export(random_test_posixlt_datetimes)
 export(read.zip.url)
 export(read_xlsx_linux)
 export(rm_r)
+export(save_in_data_dir)
 export(set_attr_in_place)
 export(shuffle)
 export(source_purl)
@@ -79,7 +81,13 @@ export(strPairMatch)
 export(strip)
 export(stripForFormula)
 export(trim)
+export(unzip_single)
+export(unzip_to_data_raw)
 export(zero_na)
 export(zeroes)
 import(Rcpp)
+importFrom(magrittr,"%<>%")
+importFrom(magrittr,"%>%")
+importFrom(magrittr,extract2)
+importFrom(magrittr,set_names)
 useDynLib(jwutil)
