--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,5 +30,5 @@ Suggests:
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
-LinkingTo: Rcpp
+LinkingTo: Rcpp, testthat
 RoxygenNote: 5.0.1
