--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,3 +32,4 @@ BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
 LinkingTo: Rcpp, testthat
 RoxygenNote: 5.0.1
+VignetteBuilder: knitr
