--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,10 @@ os:
 warnings_are_errors: true
 
 r_github_packages:
- - covr
+ - jimhester/covr
 
 after_success:
  - Rscript -e 'covr::coveralls()'
- - Rscript -e 'covr::codecov()'
 
 notifications:
   email:
