copyright and tweak docs. completely clean check.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(jw_df_basics)
 export(listTrim)
 export(listTrimFlat)
 export(logicalToBinary)
+export(ls.objects)
 export(lsf)
 export(lsos)
 export(lsp)
