add function to require packages and install them if necessary redocument with roxygen upgrade

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(random_test_numbers)
 export(random_test_posixlt_datetimes)
 export(read.zip.url)
 export(read_xlsx_linux)
+export(reqinst)
 export(rm_r)
 export(save_in_data_dir)
 export(set_attr_in_place)
