--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(bad_input)
 export(binary_col_names)
 export(binary_cols)
 export(buildLinearFormula)
+export(build_formula)
 export(combn_subset)
 export(countIsNa)
 export(countNonNaCumulative)
@@ -23,12 +24,12 @@ export(countNumeric)
 export(download_to_data_raw)
 export(dput_expect_equal)
 export(dropDuplicateFields)
-export(expandFactors)
 export(expect_that_combine_all_args)
 export(expect_that_combine_first_arg)
 export(extreme_numbers)
 export(factorToDataframeLogical)
 export(factor_nosort)
+export(factor_to_df_logical)
 export(fillMissingCombs)
 export(filterBetter)
 export(flattenList)
@@ -88,8 +89,9 @@ export(unzip_to_data_raw)
 export(zero_na)
 export(zeroes)
 import(Rcpp)
+import(stats)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(magrittr,set_names)
-useDynLib(jwutil)
+useDynLib(jwutil, .registration=TRUE)
