env functions hack vignette so it builds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,4 +94,5 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(magrittr,set_names)
+importFrom(utils,install.packages)
 useDynLib(jwutil, .registration=TRUE)
