--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,38 @@ r:
 
 os:
   - linux
+  - osx
+
+matrix:
+  fast_finish: true
+  allow_failures:
+  - r: oldrel
+  include:
+  - env: LINTR_COMMENT_BOT=true
+
+env:
+  global:
+    - R_CHECK_CRAN_INCOMING_=FALSE _R_CHECK_FORCE_SUGGESTS_=FALSE
+    - LINTR_COMMENT_BOT=false
+  matrix:
+    - CFLAGS="-Og -Werror -Wall -Wextra -pedantic" CXXFLAGS="-Og -Werror -Wall -Wextra -pedantic"
+    - CFLAGS="-O3 -march=native" CXXFLAGS="-O3 -march=native"
 
 warnings_are_errors: true
 
-r_github_packages:
+r_binary_install:
+ - testthat
+ - Rcpp
+ - knitr
+
+r_install:
+ - magrittr
+ - lintr
+ - testthat
+
+install_github:
  - jimhester/covr
- - jimhester/lintr
+# - jimhester/lintr
 
 after_success:
  - Rscript -e 'covr::coveralls()'
