[ci skip] don't import Rcpp or devtools function to update install_github packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,10 +19,10 @@ Imports:
     checkmate,
     magrittr,
     methods,
-    Rcpp,
     stats,
     utils
 Suggests:
+    devtools,
     knitr,
     lintr,
     testthat,
