--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,10 +86,12 @@ export(stripForFormula)
 export(trim)
 export(unzip_single)
 export(unzip_to_data_raw)
+export(update_github_pkgs)
 export(zero_na)
 export(zeroes)
-import(Rcpp)
 import(stats)
+import(tools)
+import(utils)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
