checks zero problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(unzip_to_data_raw)
 export(update_github_pkgs)
 export(zero_na)
 export(zeroes)
+import(Rcpp)
 import(stats)
 import(tools)
 import(utils)
