--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(extreme_numbers)
 export(factorToDataframeLogical)
 export(factor_nosort)
 export(factor_to_df_logical)
+export(fastIntToStringRcpp)
 export(fillMissingCombs)
 export(filterBetter)
 export(flattenList)
@@ -89,13 +90,25 @@ export(unzip_to_data_raw)
 export(update_github_pkgs)
 export(zero_na)
 export(zeroes)
-import(Rcpp)
 import(stats)
 import(tools)
 import(utils)
+importFrom(Rcpp,evalCpp)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(magrittr,set_names)
+importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
+importFrom(stats,runif)
+importFrom(utils,combn)
+importFrom(utils,compareVersion)
+importFrom(utils,contrib.url)
+importFrom(utils,download.file)
+importFrom(utils,globalVariables)
 importFrom(utils,install.packages)
+importFrom(utils,object.size)
+importFrom(utils,packageDescription)
+importFrom(utils,read.delim)
+importFrom(utils,unzip)
 useDynLib(jwutil, .registration=TRUE)
