drop more dependencies document imports in functions themselves

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(countNumeric)
 export(download_to_data_raw)
 export(dput_expect_equal)
 export(dropDuplicateFields)
+export(dropRowsWithNAField)
 export(drop_duplicate_fields)
 export(expect_that_combine_all_args)
 export(expect_that_combine_first_arg)
@@ -97,19 +98,18 @@ export(unzip_to_data_raw)
 export(update_github_pkgs)
 export(zero_na)
 export(zeroes)
-import(stats)
-import(tools)
-import(utils)
 importFrom(Rcpp,evalCpp)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,runif)
+importFrom(tools,package_dependencies)
+importFrom(utils,available.packages)
 importFrom(utils,combn)
 importFrom(utils,compareVersion)
 importFrom(utils,contrib.url)
 importFrom(utils,download.file)
-importFrom(utils,globalVariables)
 importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
 importFrom(utils,object.size)
 importFrom(utils,packageDescription)
 importFrom(utils,read.delim)
