--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(factor_nosort)
 export(factor_to_df_logical)
 export(fastIntToStringRcpp)
 export(fillMissingCombs)
+export(filterBetter)
 export(filter_better)
 export(flattenList)
 export(getDropped)
