snake naming functions, docs, update from icd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,6 @@ export(extreme_numbers)
 export(factorToDataframeLogical)
 export(factor_nosort)
 export(factor_to_df_logical)
-export(fastIntToStringRcpp)
 export(fillMissingCombs)
 export(filterBetter)
 export(filter_better)
@@ -91,8 +90,9 @@ export(shuffle)
 export(source_purl)
 export(strMultiMatch)
 export(strPairMatch)
+export(str_multi_match)
 export(strip)
-export(stripForFormula)
+export(strip_for_formula)
 export(trim)
 export(unzip_single)
 export(unzip_to_data_raw)
