--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: jwutil
 Title: Tools for Data Manipulation and Testing
-Version: 1.2.0
+Version: 1.2.1
 Authors@R: person("Jack O. Wasey", role = c("aut", "cre", "cph"),
     email = "jack@jackwasey.com")
 Description: This is a set of simple utilities for various data manipulation and testing tasks.
-    The goal is to use base tools and 'tidyverse' well, without bringing in too many
+    The goal is to use core R tools well, without bringing in many
     dependencies. Main areas of interest are semi-automated data frame manipulation, such as
     converting factors in multiple binary indicator columns. There are testing
     functions which provide 'testthat' expectations to permute arguments to
