complete some camel to snake conversion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(tools,package_dependencies)
 importFrom(utils,available.packages)
 importFrom(utils,combn)
