--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,20 @@
 Package: jwutil
 Title: Tools for Data Manipulation and Testing
 Version: 1.2.1.9000
-Authors@R: person("Jack O. Wasey", role = c("aut", "cre", "cph"),
-    email = "jack@jackwasey.com")
-Description: This is a set of simple utilities for various data manipulation and testing tasks.
-    The goal is to use base tools and 'tidyverse' well, without bringing in too many
-    dependencies. Main areas of interest are semi-automated data frame manipulation, such as
-    converting factors in multiple binary indicator columns. There are testing
-    functions which provide 'testthat' expectations to permute arguments to
-    function calls. There are functions and data to test extreme numbers, dates,
-    and bad input of various kinds which should allow testing failure and corner
-    cases, which can be used for fuzzing your functions. The test suite has many examples of usage.
+Authors@R: 
+    person(given = "Jack O. Wasey",
+           role = c("aut", "cre", "cph"),
+           email = "jack@jackwasey.com")
+Description: This is a set of simple utilities for various data
+    manipulation and testing tasks.  The goal is to use base tools and
+    'tidyverse' well, without bringing in too many dependencies. Main
+    areas of interest are semi-automated data frame manipulation, such as
+    converting factors in multiple binary indicator columns. There are
+    testing functions which provide 'testthat' expectations to permute
+    arguments to function calls. There are functions and data to test
+    extreme numbers, dates, and bad input of various kinds which should
+    allow testing failure and corner cases, which can be used for fuzzing
+    your functions. The test suite has many examples of usage.
 URL: https://github.com/jackwasey/jwutil
 Depends:
     R (>= 3.4.0)
@@ -26,6 +30,9 @@ Suggests:
 License: GPL-3
 BugReports: https://github.com/jackwasey/jwutil/issues
 Encoding: UTF-8
-LinkingTo: Rcpp, testthat
+LinkingTo: 
+    Rcpp,
+    testthat
 RoxygenNote: 6.0.1
-VignetteBuilder: knitr
+VignetteBuilder: 
+    knitr
