examples, renamed some functions better factor_to_df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,10 @@ export("%ine%")
 export("%nin%")
 export(add_time_to_date)
 export(affixFields)
-export(allIsInteger)
-export(allIsNumeric)
-export(areIntegers)
 export(areNumeric)
-export(asIntegerNoWarn)
-export(asNumericNoWarn)
 export(as_char_no_warn)
+export(as_integer_nowarn)
+export(as_numeric_nowarn)
 export(bad_input)
 export(binary_col_names)
 export(binary_cols)
@@ -19,7 +16,6 @@ export(build_formula)
 export(combn_subset)
 export(countIsNa)
 export(countNonNaCumulative)
-export(countNonNaPairs)
 export(countNotNumeric)
 export(countNumeric)
 export(download_to_data_raw)
@@ -32,7 +28,7 @@ export(expect_that_combine_first_arg)
 export(extreme_numbers)
 export(factorToDataframeLogical)
 export(factor_nosort)
-export(factor_to_df_logical)
+export(factor_to_df)
 export(fillMissingCombs)
 export(filterBetter)
 export(filter_better)
@@ -51,6 +47,8 @@ export(invwhich)
 export(is.Date)
 export(isFlat)
 export(isValidTime)
+export(is_integerish)
+export(is_numeric_str)
 export(jw_df_basics)
 export(listTrim)
 export(listTrimFlat)
