--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%ine%")
 export("%nin%")
 export(add_time_to_date)
 export(affixFields)
+export(areIntegers)
 export(areNumeric)
 export(as_char_no_warn)
 export(as_integer_nowarn)
