functions to print integer percentage summaries and succinctly extract such count data from data frames

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,12 +59,15 @@ export(ls.objects)
 export(lsf)
 export(lsos)
 export(lsp)
+export(match_multi)
 export(mergeBetter)
 export(mergeLists)
 export(merge_better)
 export(min_r_version)
+export(npc)
 export(numbers_to_long_and_float)
 export(opt_binary_brute)
+export(percentize)
 export(permute)
 export(permuteWithRepeats)
 export(platformIsLinux)
