more NA fixing functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(dput_expect_equal)
 export(dropDuplicateFields)
 export(dropRowsWithNAField)
 export(drop_duplicate_fields)
+export(drop_rows_with_na)
 export(expect_that_combine_all_args)
 export(expect_that_combine_first_arg)
 export(extreme_numbers)
@@ -33,6 +34,7 @@ export(factor_to_df)
 export(fillMissingCombs)
 export(filterBetter)
 export(filter_better)
+export(fix_na_ish)
 export(flattenList)
 export(getDropped)
 export(getFactorNames)
@@ -40,7 +42,9 @@ export(getNAFields)
 export(getNonFactorNames)
 export(getNonNAFields)
 export(get_factor_fields)
+export(get_na_fields)
 export(get_non_factor_fields)
+export(get_non_na_fields)
 export(get_numeric_char_field_names)
 export(get_numeric_field_names)
 export(get_numeric_fields)
@@ -49,6 +53,7 @@ export(is.Date)
 export(isFlat)
 export(isValidTime)
 export(is_integerish)
+export(is_na_ish)
 export(is_numeric_str)
 export(jw_df_basics)
 export(listTrim)
@@ -67,6 +72,7 @@ export(min_r_version)
 export(npc)
 export(numbers_to_long_and_float)
 export(opt_binary_brute)
+export(percent_signif)
 export(percentize)
 export(permute)
 export(permuteWithRepeats)
@@ -96,6 +102,9 @@ export(str_multi_match)
 export(strip)
 export(strip_for_formula)
 export(trim)
+export(two_cat_col_names)
+export(two_cat_cols)
+export(two_cat_to_logical)
 export(unzip_single)
 export(unzip_to_data_raw)
 export(update_github_pkgs)
