--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 1.2.2
 Authors@R: 
     person(given = "Jack O. Wasey",
            role = c("aut", "cre", "cph"),
-           email = "jack@jackwasey.com")
+           email = "jack@jackwasey.com",
+           comment = c(ORCID = "0000-0003-3738-4637"))
 Description: This is a set of simple utilities for various data
     manipulation and testing tasks.  The goal is to use core R tools well,
     without bringing in many dependencies. Main areas of interest are
