--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(is_integerish)
 export(is_na_ish)
 export(is_numeric_str)
 export(jw_df_basics)
+export(jw_scan_build)
 export(listTrim)
 export(listTrimFlat)
 export(logicalToBinary)
