--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(jw_df_basics)
 export(jw_scan_build)
 export(listTrim)
 export(listTrimFlat)
+export(list_named)
 export(logicalToBinary)
 export(logical_to_binary)
 export(ls.objects)
@@ -77,6 +78,7 @@ export(percent_signif)
 export(percentize)
 export(permute)
 export(permuteWithRepeats)
+export(pgo_bench)
 export(platformIsLinux)
 export(platformIsMac)
 export(platformIsWindows)
@@ -96,6 +98,7 @@ export(rm_r)
 export(save_in_data_dir)
 export(set_attr_in_place)
 export(shuffle)
+export(sort_clip_char)
 export(source_purl)
 export(strMultiMatch)
 export(strPairMatch)
