don't export headers, drop in-place attr change

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(get_numeric_fields)
 export(invwhich)
 export(is.Date)
 export(isFlat)
+export(isRowSorted)
 export(isValidTime)
 export(is_integerish)
 export(is_na_ish)
@@ -96,7 +97,6 @@ export(read_zip_url)
 export(reqinst)
 export(rm_r)
 export(save_in_data_dir)
-export(set_attr_in_place)
 export(shuffle)
 export(sort_clip_char)
 export(source_purl)
